--- a/index.html
+++ b/index.html
@@ -5,24 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <nav class="nav-header">
-        <a href="/">WebStudio</a>
-        <ul>
+      <nav class="header">
+        <a href="/" lang="en" class="logo">
+          <span class="logo-web">Web</span>Studio</a
+        >
+        <ul class="nav list">
           <li>
-            <a href="#">Студия</a>
+            <a href="./index.html" class="list current">Студия</a>
           </li>
           <li>
-            <a href="#">Портфолио</a>
+            <a href="./portfolio.html" class="list">Портфолио</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="#" class="list">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="auth list">
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -32,38 +39,38 @@
       </ul>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
 
       <section class="features">
         <h2>Особенности</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -72,57 +79,53 @@
       </section>
 
       <section class="we-do">
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
-            <a href="#"
-              ><img src="images/box1.jpg" alt="Верстка" width="370"
-            /></a>
+            <a href="#"><img src="images/box1.jpg" alt="Верстка" /> </a>
           </li>
           <li>
-            <a href="#"
-              ><img src="images/box2.jpg" alt="Адаптив" width="370"
-            /></a>
+            <a href="#"><img src="images/box2.jpg" alt="Адаптив" /> </a>
           </li>
           <li>
-            <a href="#"
-              ><img src="images/box3.jpg" alt="Дизайн" width="370"
-            /></a>
+            <a href="#"><img src="images/box3.jpg" alt="Дизайн" /> </a>
           </li>
         </ul>
       </section>
 
       <section class="team">
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
-            <img src="images/img1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h2>Игорь Демьяненко</h2>
-            <p>Product Designer</p>
+            <img src="images/img1.jpg" alt="Игорь Демьяненко" />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="images/img2.jpg" alt="Ольга Репина" width="270" />
-            <h2>Ольга Репина</h2>
-            <p>Frontend Developer</p>
+            <img src="images/img2.jpg" alt="Ольга Репина" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img3.jpg" alt="Николай Тарасов" width="270" />
-            <h2>Николай Тарасов</h2>
-            <p>Marketing</p>
+            <img src="images/img3.jpg" alt="Николай Тарасов" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="images/img4.jpg" alt="Михаил Ермаков" width="270" />
-            <h2>Михаил Ермаков</h2>
-            <p>UI Designer</p>
+            <img src="images/img4.jpg" alt="Михаил Ермаков" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/">WebStudio</a>
-      <ul>
+    <footer class="footer">
+      <a href="/" lang="en" class="logo">
+        <span class="logo-web">Web</span>Studio</a
+      >
+      <ul class="list">
         <li>
-          <address>г. Киев, пр-т Леси Украинки, 26</address>
+          <address class="">г. Киев, пр-т Леси Украинки, 26</address>
         </li>
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
